test/error/OpAndAssignDouble.fu
public static class Test
{
	public static bool Run()
	{
		float f = 5;
		f &= 1; //ERROR: Cannot convert 'float' to 'int'
		return true;
	}
}
